# Kalaha

./: .gitignore  CMakeLists.txt  CodeCoverage.cmake
src/: CMakeLists.txt  main.cpp
src/AI/: AbstractLayer.cpp  AbstractLayer.h  Ai.cpp  Ai.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  FunctionLayer.cpp  FunctionLayer.h  InnerLayer.cpp  InnerLayer.h  InputLayer.cpp  InputLayer.h
src/Game/: AbstractBoard.cpp  AbstractBoard.h  Board.cpp  Board.h  Competition.cpp  Competition.h  ConsoleInputPlayer.cpp  ConsoleInputPlayer.h  Game.cpp  Game.h  IPlayer.cpp  IPlayer.h  Pit.cpp  Pit.h  Player.cpp  Player.h  PlayerNumber.cpp  PlayerNumber.h  RandomPlayer.cpp  RandomPlayer.h  Rules.h  SmartPlayer.cpp  SmartPlayer.h  Tournament.cpp  Tournament.h
src/Output/: AbstractOutput.h  ConsoleOutput.cpp  ConsoleOutput.h  IOutput.h  NullOutput.h  Output.h
src/Player/: AbstractPlayer.cpp  AbstractPlayer.h  AiPlayer.cpp  AiPlayer.h  ConsoleInputPlayer.cpp  ConsoleInputPlayer.h  RandomPlayer.cpp  RandomPlayer.h  SmartPlayer.cpp  SmartPlayer.h
src/Tools/: Random.h  Serializable.cpp  Serializable.h
test/: CMakeLists.txt  main.cpp
test/AI/: Ai-test.cpp  FullyConnectedLayer-test.cpp  FunctionLayer-test.cpp  Layer-test.cpp
test/Game/: Board-mock.cpp  Board-mock.h  Board-test.cpp  Competition-test.cpp  Game-test.cpp  Pit-test.cpp  Player-Mock.h  Player-test.cpp  PlayerNumber-test.cpp  SmartPlayer-test.cpp  Tournament-test.cpp
test/Output/: ConsoleOutput-test.cpp  Output-mock.h
test/Player/: Player-Mock.cpp  Player-Mock.h  Player-mock.cpp  Player-mock.h  SmartPlayer-test.cpp
